apps/rampme/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rampme-frontend
  namespace: rampme
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: rampme-site
  hostnames:
    - rampme.site
  rules:
    - backendRefs:
        - name: rampme-frontend
          port: 3000
